--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@langchain/openai": "^0.3.17",
     "@sanity/image-url": "^1.0.2",
     "@sanity/vision": "^3.52.2",
-    "@starknet-react/core": "^3.7.1",
+    "@starknet-react/chains": "^0.1.0",
+    "@starknet-react/core": "^2.9.0",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.12",
     "feed": "^4.2.2",
@@ -28,7 +29,7 @@
     "react-dom": "^18",
     "react-use-measure": "^2.1.1",
     "sanity": "^3.55.0",
-    "starknet": "^6.11.0"
+    "starknet": "^5.29.0"
   },
   "devDependencies": {
     "@types/node": "^20.17.13",
