--- a/package.json
+++ b/package.json
@@ -6,15 +6,11 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "typegen": "sanity schema extract --path=src/sanity/extract.json && sanity typegen generate && rm ./src/sanity/extract.json"
-  },
+    "lint": "next lint"  },
   "dependencies": {
     "@headlessui/react": "^2.1.1",
     "@heroicons/react": "^2.1.4",
     "@langchain/openai": "^0.3.17",
-    "@sanity/image-url": "^1.0.2",
-    "@sanity/vision": "^3.52.2",
     "@starknet-react/chains": "^0.1.0",
     "@starknet-react/core": "^2.9.0",
     "clsx": "^2.1.1",
@@ -25,11 +21,9 @@
     "langchain": "^0.3.11",
     "lucide-react": "^0.473.0",
     "next": "^14.2.11",
-    "next-sanity": "^9.4.7",
     "react": "^18",
     "react-dom": "^18",
     "react-use-measure": "^2.1.1",
-    "sanity": "^3.55.0",
     "starknet": "^5.29.0"
   },
   "devDependencies": {
