--- a/package.json
+++ b/package.json
@@ -6,24 +6,19 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"  },
+    "lint": "next lint"
+  },
   "dependencies": {
     "@headlessui/react": "^2.1.1",
-    "@heroicons/react": "^2.1.4",
-    "@langchain/openai": "^0.3.17",
     "@starknet-react/chains": "^0.1.0",
     "@starknet-react/core": "^2.9.0",
     "clsx": "^2.1.1",
-    "dayjs": "^1.11.12",
-    "feed": "^4.2.2",
     "framer-motion": "^11.2.10",
     "get-starknet": "^3.3.3",
-    "langchain": "^0.3.11",
     "lucide-react": "^0.473.0",
     "next": "^14.2.11",
     "react": "^18",
     "react-dom": "^18",
-    "react-use-measure": "^2.1.1",
     "starknet": "^5.29.0"
   },
   "devDependencies": {
